#20 - Implement search/lookup
