# applications/pub-chem-index/api/openapi.yaml
@@ -23,7 +23,7 @@ paths:
       operationId: getMolecules
       summary: List All Molecules
       description: Gets a list of all `Molecule` entities.
-  "/molecules/{moleculeByCID}":
+  "/molecules/{cid}":
     summary: Path used to manage a single Molecule search by CID.
     description: >-
       The REST endpoint/path used to get single instances of an `Molecule`.  This
@@ -38,17 +38,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/Molecule"
           description: Successful response - returns a single `Molecule`.
-      operationId: getMoleculeByCID
+      operationId: getMoleculesByCID
       summary: Get a Molecule
       description: Gets the details of a single instance of a `Molecule`.
     parameters:
-      - name: moleculeByCID
+      - name: cid
         description: A unique identifier for a `Molecule`.
         schema:
           type: string
         in: path
         required: true
-  "/molecules/{moleculeBySynonym}":
+  "/molecules/{synonym}":
     summary: Path used to manage a single Molecule search by synonym.
     description: >-
       The REST endpoint/path used to get single instances of an `Molecule`.  This
@@ -63,11 +63,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Molecule"
           description: Successful response - returns a single `Molecule`.
-      operationId: getMoleculeBySynonym
+      operationId: getMoleculesBySynonym
       summary: Get Molecules by synonym.
       description: Gets the details of a single instance of a `Molecule`.
     parameters:
-      - name: moleculeBySynonym
+      - name: synonym
         description: A unique identifier for a `Molecule`.
         schema:
           type: string
